--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -17,7 +17,7 @@
         <a href="CGU">Consulter les Conditions Générales d'Utilisation</a>
         <br>
 
-        <div class="d-flex flex-row flex-wrap justify-content-between">
+        <div class="btns--row">
             <button type="submit" class="btn btn-sm btn--blue">
                 <i class="ri-record-circle-line"></i>&ensp;Créer le compte
             </button>
