--- a/templates/driver/banner.html.twig
+++ b/templates/driver/banner.html.twig
@@ -2,8 +2,7 @@
 <section class="driverspresentation--banner" id="banner" style="background-image:url({{ asset(sImgPath ~'banner/pilotes-motogp-2020.png') }});">
     <H1>LE PADDOCK</H1>
     
-    <a class="btn btn--ordering" href="{{ path('claim_create') }}"
-    style="bottom:50px;">
+    <a class="btn btn--ordering" href="{{ path('claim_create') }}" style="bottom:50px;">
         <i class="fas fa-motorcycle"></i>&nbsp;Commander une course
     </a>
     
