--- a/templates/mailer/confirmation.html.twig
+++ b/templates/mailer/confirmation.html.twig
@@ -1,12 +1,44 @@
-<h1>Bonjour à vous. Merci de confirmer votre adresse électronique.</h1>
+<!DOCTYPE html>
+<html lang="fr">
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- -->
+        <meta name="description" content="Annuaire moto-taxi taxi-moto toute la France"/>
+        <meta name="author" content="BIROLINI Herve"/>
+        
+        <!--  -->
+        <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous"> -->
+        <!-- LINK nécessaire pour bénéficier de la balise I, de CDN Font Awesome -->
+        <!-- <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/> -->
 
-<p>
-    Pour confirmer votre inscription à notre annuaire, cliquez sur le lien ci-dessous svp.<br>
-    ATTENTION !! Ce lien expirera dans {{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}.
-    <br><br>
-    <a href="{{ signedUrl }}"><b>Je confirmer ICI mon inscription</b></a>.
-</p>
+    </head>
 
-<p>
-    A tout de suite !
-</p>
+    <body>
+
+        <h1>Bonjour à vous.<br>Merci de confirmer votre adresse électronique.</h1>
+
+        <p>
+            Pour confirmer votre inscription à notre annuaire, cliquez sur le lien ci-dessous svp.<br>
+            ATTENTION !! Ce lien expirera dans {{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}.
+            <br><br>
+            
+            <div style="width:fit-content;background-color:grey;border:2px solid black;border-radius:2em;padding:1em;">
+                <a style="color:white;font-weight:bold;" href="{{ signedUrl }}">Je confirmer ICI mon inscription</a>
+            </div>
+
+        </p>
+
+        <p>
+            A tout de suite !
+        </p>
+
+
+        <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
+    
+    </body>
+</html>
