--- a/templates/profile/customer.html.twig
+++ b/templates/profile/customer.html.twig
@@ -5,6 +5,8 @@
 
 {% block body %}
 
+    <!-- ##### v DEBUT DES ELEMENTS PRINCIPAUX DE LA PAGE v ##### -->
+
     {{ include('profile/banner.html.twig') }}
     
     <!-- Zone d'affichage des messages "FLASH" venant du Controller -->
@@ -228,35 +230,17 @@
         </table>
     </div>
 
+    <!-- ##### ^ FIN DES ELEMENTS PRINCIPAUX DE LA PAGE ^ ##### -->
+
+    <!-- ------------------------------------------------------ -->
+    
+    <!-- ##### v DEBUT DES MODALES v ##### -->
+
     <!-- Modal d'affichage des détails de la demande -->
     {% for claim in app.user.customer.getclaims %}
     <div class="modal--big p-5" id="{{ 'modal--claim--'~claim.id }}" style="display:none;">
         <!-- Les "détails" de la demande -->
-        <h3 class="pb-1">{{ 'Demande : (#'~claim.id~')' }}</h3>
-        <table class="table table-striped">
-            <tbody>
-                <tr>
-                    <th class="thead--dark">Date de la demande</th>
-                    <td>{{ claim.claimdatetime|date('d/m/Y') }}</td>
-                </tr>
-                <tr>
-                    <th class="thead--dark">Jour de la course</th>
-                    <td>{{ claim.journeydate|date('d/m/Y') }}</td>
-                </tr>
-                <tr>
-                    <th class="thead--dark">Prise en charge à l'adresse</th>
-                    <td>{{ claim.fromroad~', '~claim.fromzip~' '~getcitybyzip(claim.fromzip).name }}</td>
-                </tr>
-                <tr>
-                    <th class="thead--dark">Arrivée attendue pour</th>
-                    <td>{{ claim.arrivalattime|date('H:i') }}</td>
-                </tr>
-                <tr>
-                    <th class="thead--dark">A la destination</th>
-                    <td>{{ claim.toroad~', '~claim.tozip~' '~getcitybyzip(claim.tozip).name }}</td>
-                </tr>
-            </tbody>
-        </table>
+        {{ include('claim/card.html.twig') }}
         <!-- Les "cartes" des utilisateurs destinataires de la demande... -->
         {% if claim.drivers %}
         <h3 class="pt-3">Envoyée à :</h3>
@@ -277,5 +261,7 @@
         </button>
     </div>
     {% endfor %}
+
+    <!-- ##### v FIN DES MODALES v ##### -->
 
 {% endblock %}
