--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -53,7 +53,8 @@
             </div>
         #}
         
-        <div class="d-flex justify-content-around mb-3 w-100">
+        <div class="btns--row">
+        <!-- <div class="d-flex justify-content-around mb-3 w-100"> -->
             <button class="btn btn-sm btn--blue" type="submit">
             <!-- <button class="btn btn-lg btn-primary" type="submit"> -->
                 <i class="ri-login-box-line"></i>&ensp;Se connecter
